# quantum_analyzer

./: .env.example  .gitignore  Dockerfile.ui  LICENSE  Makefile  README.md  README_UI.md  pyproject.toml  requirements-ui.txt
quantum_analyzer/: __init__.py  contracts.py
scripts/: build_feature_snapshot.py  emit_advisory.py  evaluate_release_candidate.py  promote_signal.py  qa_doctor.py  refresh_discovery_memory.py  run_discovery.py  run_explorer.py  run_research_cycle.py  run_ui.sh  schedule_explorer.py  schedule_research_cycle.py  update_market_data.py
tests/: test_action_quality_metrics.py  test_backtest.py  test_backtest_page.py  test_backtest_view.py  test_candidate_evaluator.py  test_contracts.py  test_dataset_snapshots.py  test_decision_explainer.py  test_discovery_evaluation.py  test_discovery_generator.py  test_discovery_novelty.py  test_discovery_page.py  test_doctor.py  test_drift_page.py  test_emit_advisory.py  test_evaluate_release_candidate.py  test_experiment_runner.py  test_experiment_specs.py  test_explorer_page.py  test_feature_store.py  test_feature_subsets.py  test_features.py  test_forecast.py  test_governance.py  test_ingest_binance.py  test_journal.py  test_live_advice.py  test_live_service.py  test_meta_research.py  test_path_miner.py  test_policy.py  test_promotion.py  test_promotion_robustness.py  test_registry.py  test_release_gates.py  test_research_cycle.py  test_robust_scoring.py  test_score_engine.py  test_signal_genealogy.py  test_signal_selector.py  (+7 more)
ui/: adapters.py  app.py  backtest_view.py  charts.py  components.py  config.py  (+12 more)
(+834 files in other folders)
